horizontal scroll on chrome fix

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   line-height: 1.5;
   font-family: "Outfit", sans-serif;
   padding: 0;
+  overflow-x: hidden;
 }
 
 p,
